@@ -23,7 +23,7 @@ INPUT
 
 T_PTROBJ_SPECIAL
         if (sv_derived_from($arg, \"version\")) {
-	    $var = $arg;
+	    $var = SvRV($arg);
         }
         else
             Perl_croak(aTHX_ \"$var is not of type ${(my $ntt=$ntype)=~s/_/::/g;\$ntt}\")
