@@ -1,3 +1,11 @@
+2007-02-08  John Peacock <jpeacock@cpan.org>
+
+	Prepare for another alpha release to CPAN
+
+2007-02-08  John Peacock <jpeacock@cpan.org>
+
+	Apply more const'ifying and code cleanup from bleadperl.
+
 2007-02-07  John Peacock <jpeacock@cpan.org>
 
 	Better regex to handle weird exponential notation under 5.6.x on OSX.
